campaign name overflow issue in ad creation page

--- a/app/assets/stylesheets/campaign_create.less
+++ b/app/assets/stylesheets/campaign_create.less
@@ -858,6 +858,16 @@
     }
     // Campaign Create Ad POP Ends Here
   }
+  .adMasterContainer {
+   .campTitleWrap {
+     h4 {
+       max-width: 330px;
+       white-space: nowrap;
+       text-overflow: ellipsis;
+       overflow: hidden;
+     }
+   }
+ }
   .campaign-name-edit.blue-edit-icon {
     display: inline-block;
     margin-top: -4px;
